--- a/Fomalhaut2/Base.lproj/Main.storyboard
+++ b/Fomalhaut2/Base.lproj/Main.storyboard
@@ -556,8 +556,7 @@
                                         <fragment content="CollectionStyleItem"/>
                                     </attributedString>
                                 </toolbarItem>
-                                <toolbarItem implicitItemIdentifier="32DC3CB0-4855-4781-AEAF-9D8A644BE98E" label="New collection" paletteLabel="New collection" image="add.bookmark" sizingBehavior="auto" id="s7q-6j-XVy">
-                                    <nil key="toolTip"/>
+                                <toolbarItem implicitItemIdentifier="32DC3CB0-4855-4781-AEAF-9D8A644BE98E" label="New collection" paletteLabel="New collection" toolTip="New collection" image="add.bookmark" sizingBehavior="auto" id="s7q-6j-XVy">
                                     <button key="view" verticalHuggingPriority="750" id="dbk-fa-WXN">
                                         <rect key="frame" x="19" y="14" width="48" height="32"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
