--- a/Fomalhaut2QuickLook/Base.lproj/PreviewViewController.xib
+++ b/Fomalhaut2QuickLook/Base.lproj/PreviewViewController.xib
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="11762" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="17701" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
     <dependencies>
         <deployment identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="11762"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="17701"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <customObject id="-2" userLabel="File's Owner" customClass="PreviewViewController" customModuleProvider="target">
+        <customObject id="-2" userLabel="File's Owner" customClass="PreviewViewController" customModule="Fomalhaut2QuickLook" customModuleProvider="target">
             <connections>
+                <outlet property="imageView" destination="NRv-6m-iiA" id="Xas-Vi-7yi"/>
                 <outlet property="view" destination="c22-O7-iKe" id="NRM-P4-wb6"/>
             </connections>
         </customObject>
@@ -16,6 +17,19 @@
         <customView id="c22-O7-iKe" userLabel="Preview View">
             <rect key="frame" x="0.0" y="0.0" width="480" height="272"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+            <subviews>
+                <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="NRv-6m-iiA">
+                    <rect key="frame" x="0.0" y="0.0" width="480" height="272"/>
+                    <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyUpOrDown" id="COt-Zl-OW9"/>
+                </imageView>
+            </subviews>
+            <constraints>
+                <constraint firstAttribute="trailing" secondItem="NRv-6m-iiA" secondAttribute="trailing" id="CsN-NY-6yo"/>
+                <constraint firstItem="NRv-6m-iiA" firstAttribute="leading" secondItem="c22-O7-iKe" secondAttribute="leading" id="FK9-X9-w7j"/>
+                <constraint firstItem="NRv-6m-iiA" firstAttribute="top" secondItem="c22-O7-iKe" secondAttribute="top" id="lBV-g5-XQ4"/>
+                <constraint firstAttribute="bottom" secondItem="NRv-6m-iiA" secondAttribute="bottom" id="myI-kY-gbg"/>
+            </constraints>
+            <point key="canvasLocation" x="-161" y="154"/>
         </customView>
     </objects>
 </document>
